# soma

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .mise.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  cargo-generate.toml  config.example.toml  config.soma.toml  config.toml  conformance-baseline.yml  deny.toml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  install.sh  lefthook.yml  manifest  mcp-server-inventory.md  release-please-config.json  server.json  soma-architecture-refactor-plan-v3.md  taplo.toml
apps/palette/src-tauri/: Cargo.toml  tauri.conf.json
apps/soma/: Cargo.toml
apps/soma/src/: application_ports.rs  application_ports_tests.rs  bootstrap.rs  bootstrap_tests.rs  http.rs  http_tests.rs  invocation.rs  invocation_tests.rs  lib.rs  local.rs  local_tests.rs  protected_routes.rs  protected_routes_proxy.rs  protected_routes_proxy_tests.rs  routes.rs  routes_tests.rs  runtime.rs  runtime_tests.rs  shutdown.rs  shutdown_tests.rs  stdio.rs  stdio_tests.rs
apps/soma/tests/: README.md  ai_sdk_provider.rs  api_gateway_routes.rs  api_routes.rs  architecture_boundaries.rs  cli_parse.rs  dispatch_logging.rs  doctor_cli.rs  drop_provider_probe.rs  gateway_architecture_boundaries.rs  generated_surfaces.rs  mcp_http_roundtrip.rs  mcp_provider.rs  mcp_trace_headers.rs  openapi_provider.rs  plugin_contract.rs  provider_contract.rs  provider_registry.rs  provider_security.rs  provider_surfaces.rs  python_provider.rs  run_entrypoint.rs  soma_invariants.rs  stdio_mcp.rs  stdio_remote_api.rs  support.rs  tool_dispatch.rs  wasm_provider.rs  workflow_shapes.rs
crates/codex-app-server-client/: Cargo.toml  README.md  build.rs
crates/codex-app-server-client/examples/: approval_handler.rs  basic.rs  rest_server.rs  session_turn.rs
crates/codex-app-server-client/schema/: build_combined_schema.py  methods.json  protocol.schema.json
crates/codex-app-server-client/src/: approvals.rs  build_support.rs  builders.rs  client.rs  compat.rs  daemon.rs  error.rs  events.rs  lib.rs  protocol.rs  rest.rs  session.rs  transport.rs
crates/codex-app-server-client/tests/: batteries.rs  rest.rs  smoke.rs
crates/integrations/gotify/: CHANGELOG.md  Cargo.toml  README.md
crates/integrations/unifi/: CHANGELOG.md  Cargo.toml  README.md
crates/rmcp-template/: Cargo.toml
crates/rmcp-template/src/: lib.rs  main.rs  routes.rs  routes_tests.rs  runtime.rs
crates/rmcp-template/tests/: README.md  ai_sdk_provider.rs  api_routes.rs  architecture_boundaries.rs  cli_parse.rs  dispatch_logging.rs  drop_provider_probe.rs  generated_surfaces.rs  mcp_provider.rs  openapi_provider.rs  plugin_contract.rs  provider_cli.rs  provider_contract.rs  provider_registry.rs  provider_security.rs  provider_surfaces.rs  python_provider.rs  stdio_mcp.rs  template_invariants.rs  tool_dispatch.rs  wasm_provider.rs  workflow_shapes.rs
crates/rmcp-traces/: Cargo.toml  README.md
crates/rmcp-traces/src/: http.rs  lib.rs  trace_context.rs
crates/rmcp-traces/tests/: core_trace_context.rs  http_propagation.rs
crates/rtemplate-api/: Cargo.toml
crates/rtemplate-api/src/: api.rs  api_tests.rs
crates/rtemplate-auth/: Cargo.toml
crates/rtemplate-auth/src/: authorize.rs  config.rs  google.rs  jwt.rs  lib.rs  metadata.rs  middleware.rs  routes.rs  session.rs  sqlite.rs  state.rs  test_support.rs  token.rs  types.rs  util.rs
crates/rtemplate-cli/: Cargo.toml
crates/rtemplate-cli/src/: cli_tests.rs  doctor.rs  doctor_tests.rs  lib.rs  package.rs  package_tests.rs  providers.rs  providers_tests.rs  setup.rs  setup_tests.rs
crates/rtemplate-contracts/: Cargo.toml
crates/rtemplate-contracts/src/: actions.rs  actions_tests.rs  config.rs  config_tests.rs  env_registry.rs  env_registry_tests.rs  errors.rs  errors_tests.rs  lib.rs  provider_validation.rs  provider_validation_tests.rs  providers.rs  providers_tests.rs  token_limit.rs
crates/rtemplate-mcp/: Cargo.toml
crates/rtemplate-mcp/src/: conformance.rs  conformance_tests.rs  lib.rs  prompts.rs  prompts_tests.rs  response_paging.rs  response_paging_tests.rs  rmcp_server.rs  rmcp_server_tests.rs  schemas.rs  schemas_tests.rs  tools.rs  tools_tests.rs  transport.rs  transport_tests.rs
crates/rtemplate-observability/: Cargo.toml
crates/rtemplate-observability/src/: lib.rs  metrics.rs
crates/rtemplate-plugin-support/: Cargo.toml
crates/rtemplate-plugin-support/src/: lib.rs
crates/rtemplate-runtime/: Cargo.toml
crates/rtemplate-runtime/src/: server.rs  server_tests.rs
crates/rtemplate-service/: Cargo.toml
crates/rtemplate-service/src/: actions.rs  actions_tests.rs  app.rs  app_tests.rs  capabilities.rs  capabilities_tests.rs  example.rs  example_tests.rs  lib.rs  provider_errors.rs  provider_errors_tests.rs  (+6 more)
crates/rtemplate-test-support/: Cargo.toml
crates/soma/: Cargo.toml
crates/soma-api/: Cargo.toml
crates/soma-auth/: Cargo.toml
crates/soma-mcp/: Cargo.toml
crates/soma-mcp-server/: CLAUDE.md  Cargo.toml
crates/soma-openapi/: Cargo.toml
crates/soma-plugin-support/: Cargo.toml
crates/soma-runtime/: Cargo.toml
crates/soma-service/: Cargo.toml
crates/soma-test-support/: Cargo.toml
crates/soma-web/: Cargo.toml
xtask/: Cargo.toml  README.md
xtask/src/: architecture.rs  architecture_graph.rs  architecture_graph_tests.rs  architecture_tests.rs  cargo_generate.rs  cargo_generate_post.rs  ci_paths.rs  codex_schema.rs  doc_site.rs  generated_surfaces.rs  generated_surfaces_docs.rs  generated_surfaces_tests.rs  help.rs  help_tests.rs  main.rs  mcp_registry.rs  no_mcp.rs  patterns.rs  provider_manifest.rs  release_commands.rs  release_commands_tests.rs  release_versions.rs  release_versions_identifiers.rs  release_versions_manifest.rs  release_versions_tests.rs  repo_checks.rs  repo_checks_tests.rs  rmcp_release_monitor.rs  scaffold.rs  scripts.rs  scripts_lane_a.rs  scripts_lane_b.rs  scripts_lane_c.rs  scripts_lane_d.rs  test_siblings.rs  test_siblings_tests.rs  trace_headers_smoke.rs  ts_client.rs  web_source.rs  workspace_commands.rs  (+1 more)
(+1724 files in other folders)
