# =============================================================================
# Cargo.toml — Virtual workspace root for the soma project
#
# The runnable package lives in apps/soma. Keep new Rust code
# in workspace crates; the repository root has no src/ crate.
# =============================================================================

[workspace]
members = [
  "apps/soma",
  "crates/shared/auth",
  "crates/shared/codemode",
  "crates/shared/codex-app-server-client",
  "crates/shared/mcp/client",
  "crates/shared/mcp/gateway",
  "crates/shared/mcp/proxy",
  "crates/shared/mcp/server",
  "crates/shared/observability",
  "crates/shared/openapi",
  "crates/shared/traces",
  "crates/soma/api",
  "crates/soma/cli",
  "crates/soma/contracts",
  "crates/soma/mcp",
  "crates/soma/runtime",
  "crates/soma/service",
  "crates/soma/test-support",
  "crates/soma/web",
  "xtask",
]
resolver = "2"

[workspace.package]
authors = ["dinglebear.ai <hello@dinglebear.ai>"]
description = "Batteries-included RMCP runtime and scaffold for provider-backed Rust MCP servers with CLI, REST, HTTP MCP, and plugins."
homepage = "https://soma.dinglebear.ai"
repository = "https://github.com/jmagar/soma"
keywords = ["mcp", "rmcp", "providers", "runtime", "scaffold"]

# ── profiles ─────────────────────────────────────────────────────────────────
# release-fast: release-grade binary (optimized, stripped) but with cheap LTO and
# many codegen units so local iteration — `just sync-container`, container smoke
# loops — recompiles in a fraction of the full `release` time. Not for shipping;
# tags/publishes still build the canonical `release` profile.
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
strip = "symbols"
