# =============================================================================
# xtask/Cargo.toml — Repo automation crate
#
# Invoked via: cargo xtask <command>
#
# This crate is intentionally kept dependency-light so it compiles fast even
# on a cold cache. Do NOT add heavy runtime crates (tokio, reqwest, etc.) here.
# If you need async, use std::process::Command + shell scripts instead.
#
# CUSTOMIZE: Keep "xtask" as the crate name — cargo's xtask convention relies on it.
#           Add dependencies only if absolutely necessary.
# =============================================================================

[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors.workspace = true
homepage.workspace = true
license = "MIT"
repository.workspace = true
# Exclude from crates.io — this is a private automation crate.
publish = false

[dependencies]
# CUSTOMIZE: anyhow for ergonomic errors, walkdir for filesystem traversal.
#           These are the only deps needed for the four required commands.
#           Add more only if a new command truly requires it.
anyhow = "1"
jsonschema = "0.47"
soma-contracts = { path = "../crates/soma-contracts" }
soma-service = { path = "../crates/soma-service", default-features = false }
semver = "1"
serde = { version = "1", features = ["derive"] }
# preserve_order: `codex-schema regen` rebuilds vendored JSON Schema assets
# that must byte-match what the (deleted) Python generator produced, which
# depends on dict/definition insertion order, not alphabetical order.
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.11"
toml = "1.1"
walkdir = "2"
# codex-schema: exact port of build_combined_schema.py's tokenization regex
# `[A-Z]?[a-z0-9]+|[A-Z]+(?=[A-Z]|$)`, which needs lookahead the `regex`
# crate doesn't support.
fancy-regex = "0.18"
# codex-schema bisect: programmatically drives typify (same version/feature
# flags as crates/codex-app-server-client/build.rs) to detect the specific
# typify-0.7.0 merge.rs panic while binary-searching for the culprit schema.
typify = { version = "0.7", default-features = false }
schemars = "0.8"

[dev-dependencies]
tempfile = "3"
