# =============================================================================
# Cargo.toml — Facade and binary crate for the Soma project
#
# This crate owns the public facade plus the canonical soma entrypoint.
# Implementation lives in sibling crates.
# =============================================================================

[package]
name = "soma"
version = "0.4.7"
edition = "2021"
rust-version = "1.96"
authors.workspace = true
description = "Product-first RMCP runtime for provider-backed agent capabilities with CLI, REST, HTTP MCP, plugins, and derivative scaffold support."
homepage.workspace = true
keywords = ["mcp", "rmcp", "providers", "runtime", "scaffold"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "../../README.md"
repository.workspace = true
autobins = false

[lib]
name = "soma"

[[bin]]
name = "soma"
path = "src/bin/soma.rs"
required-features = ["cli", "mcp-stdio"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }
soma-runtime = { path = "../../crates/soma/runtime", default-features = false }
soma-api = { path = "../../crates/soma/api", optional = true }
soma-auth = { path = "../../crates/shared/auth", optional = true, features = ["http-axum"] }
soma-cli = { path = "../../crates/soma/cli", optional = true }
soma-contracts = { path = "../../crates/soma/contracts" }
soma-gateway = { path = "../../crates/shared/mcp/gateway" }
mcp-client = { package = "soma-mcp-client", path = "../../crates/shared/mcp/client", optional = true, features = ["oauth"] }
soma-mcp = { path = "../../crates/soma/mcp", optional = true }
soma-observability = { path = "../../crates/shared/observability", optional = true }
soma-service = { path = "../../crates/soma/service", default-features = false }
soma-web = { path = "../../crates/soma/web", optional = true }
rmcp = { version = "=2.2.0", default-features = false, optional = true }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls-no-provider", "stream"], optional = true }
serde_json = { version = "1", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.7", features = ["cors", "limit", "trace"], optional = true }

[features]
default = ["full"]
cli = ["dep:soma-cli", "soma-service/client"]
mcp = ["dep:soma-mcp"]
mcp-stdio = [
  "mcp",
  "dep:rmcp",
  "rmcp/transport-io",
  "soma-mcp/stdio",
  "soma-service/client",
]
api = ["auth", "dep:soma-api"]
auth = [
  "dep:soma-auth",
  "soma-api?/auth",
  "soma-mcp?/auth",
  "soma-runtime/auth",
]
oauth = [
  "auth",
  "soma-api?/oauth",
  "dep:mcp-client",
  "dep:futures",
  "soma-auth/upstream-oauth-rmcp",
  "soma-gateway/oauth",
  "soma-mcp?/oauth",
  "soma-runtime/oauth",
]
observability = ["dep:soma-observability", "soma-service/observability"]
plugin = ["cli"]
mcp-http = [
  "api",
  "mcp",
  "dep:axum",
  "dep:reqwest",
  "dep:serde_json",
  "dep:tower",
  "dep:tower-http",
  "soma-gateway/protected-routes",
  "soma-mcp/http",
  "soma-service/client",
]
web = ["api", "dep:soma-web"]
local-adapter = ["cli", "mcp-stdio"]
server = ["cli", "api", "mcp-http", "mcp-stdio"]
full = ["local-adapter", "server", "web", "oauth", "observability", "plugin"]
test-support = ["soma-mcp?/test-support"]

[dev-dependencies]
async-trait = "0.1"
axum = "0.8"
soma = { path = ".", package = "soma", features = ["test-support"] }
soma-contracts = { path = "../../crates/soma/contracts" }
soma-service = { path = "../../crates/soma/service" }
soma-test-support = { path = "../../crates/soma/test-support" }
serde_json = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wat = "1.252.0"
rmcp = { version = "=2.2.0", default-features = false, features = [
  "client",
  "transport-child-process",
] }
