# =============================================================================
# Cargo.toml — Facade and binary crate for the Soma project
#
# This crate owns the public facade plus the canonical soma entrypoint.
# Implementation lives in sibling crates.
# =============================================================================

[package]
name = "soma"
version = "0.4.7"
edition = "2021"
rust-version = "1.96"
authors.workspace = true
description = "Product-first RMCP runtime for provider-backed agent capabilities with CLI, REST, HTTP MCP, plugins, and derivative scaffold support."
homepage.workspace = true
keywords = ["mcp", "rmcp", "providers", "runtime", "scaffold"]
categories = ["command-line-utilities", "development-tools"]
license = "MIT"
readme = "../../README.md"
repository.workspace = true
autobins = false

[package.metadata.soma-architecture]
layer = "app"

[lib]
name = "soma"

[[bin]]
name = "soma"
path = "src/bin/soma.rs"
required-features = ["cli", "mcp-stdio"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = { version = "0.8", optional = true }
futures = { version = "0.3", optional = true }
soma-runtime = { workspace = true }
soma-api = { workspace = true, optional = true }
soma-application = { workspace = true }
soma-auth = { workspace = true, optional = true, features = ["http-axum"] }
soma-cli = { workspace = true, optional = true }
soma-contracts = { workspace = true }
soma-domain = { workspace = true }
soma-gateway = { workspace = true }
mcp-client = { workspace = true, optional = true, features = ["oauth"] }
soma-mcp = { workspace = true, optional = true }
soma-observability = { workspace = true, optional = true }
soma-service = { workspace = true }
soma-web = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls-no-provider", "stream"], optional = true }
serde_json = { version = "1", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.7", features = ["cors", "limit", "trace"], optional = true }

[features]
default = ["full"]
cli = [
  "dep:serde_json",
  "dep:soma-cli",
  "soma-application/client",
  "soma-service/client",
]
mcp = ["dep:soma-mcp"]
mcp-stdio = [
  "mcp",
  "dep:rmcp",
  "dep:serde_json",
  "rmcp/transport-io",
  "soma-gateway/protected-routes",
  "soma-application/client",
  "soma-mcp/stdio",
  "soma-service/client",
]
api = ["auth", "dep:serde_json", "dep:soma-api"]
auth = [
  "dep:soma-auth",
  "soma-api?/auth",
  "soma-mcp?/auth",
  "soma-runtime/auth",
]
oauth = [
  "auth",
  "soma-api?/oauth",
  "dep:mcp-client",
  "dep:futures",
  "soma-auth/upstream-oauth-rmcp",
  "soma-gateway/oauth",
  "soma-mcp?/oauth",
  "soma-runtime/oauth",
]
observability = [
  "dep:soma-observability",
  "soma-application/observability",
  "soma-service/observability",
]
plugin = ["cli"]
mcp-http = [
  "api",
  "mcp",
  "dep:axum",
  "dep:reqwest",
  "dep:serde_json",
  "dep:tower",
  "dep:tower-http",
  "soma-gateway/protected-routes",
  "soma-application/client",
  "soma-mcp/http",
  "soma-runtime/protected-routes",
  "soma-service/client",
]
web = ["api", "dep:soma-web"]
local-adapter = ["cli", "mcp-stdio"]
server = ["cli", "api", "mcp-http", "mcp-stdio"]
full = ["local-adapter", "server", "web", "oauth", "observability", "plugin"]
test-support = ["soma-mcp?/test-support"]

[dev-dependencies]
axum = "0.8"
soma = { path = ".", package = "soma", default-features = false, features = ["test-support"] }
soma-contracts = { workspace = true }
soma-provider-adapters = { workspace = true, features = [
  "ai-sdk",
  "gateway",
  "openapi",
  "python",
  "static-echo",
  "wasm",
] }
soma-provider-core = { workspace = true }
soma-service = { workspace = true }
soma-test-support = { workspace = true }
serde_json = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wat = "1.252.0"
rmcp = { workspace = true, features = [
  "client",
  "transport-child-process",
] }
