# =============================================================================
# Cargo.toml — Facade and binary crate for the rmcp-template project
#
# TEMPLATE: This crate owns the public facade plus the rtemplate and
# rtemplate-server entrypoints. Implementation lives in sibling crates.
# =============================================================================

[package]
name = "rmcp-template"
version = "0.4.3"
edition = "2021"
rust-version = "1.96"
description = "Template for building MCP servers with the rmcp crate"
license = "MIT"
autobins = false

[[bin]]
name = "rtemplate"
path = "src/bin/example.rs"
required-features = ["local-adapter"]

[[bin]]
name = "rtemplate-server"
path = "src/main.rs"
required-features = ["server"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
axum = { version = "0.8", optional = true }
rtemplate-runtime = { path = "../rtemplate-runtime", default-features = false }
rtemplate-api = { path = "../rtemplate-api", optional = true }
rtemplate-auth = { path = "../rtemplate-auth", optional = true }
rtemplate-cli = { path = "../rtemplate-cli", optional = true }
rtemplate-contracts = { path = "../rtemplate-contracts" }
rtemplate-mcp = { path = "../rtemplate-mcp", optional = true }
rtemplate-observability = { path = "../rtemplate-observability", optional = true }
rtemplate-plugin-support = { path = "../rtemplate-plugin-support", optional = true }
rtemplate-service = { path = "../rtemplate-service", default-features = false }
rtemplate-web = { path = "../rtemplate-web", optional = true }
rmcp = { version = "1.7.0", default-features = false, optional = true }
serde_json = { version = "1", optional = true }
tower-http = { version = "0.7", features = ["cors", "limit", "trace"], optional = true }

[features]
default = ["full"]
cli = ["dep:rtemplate-cli"]
mcp = ["dep:rtemplate-mcp"]
mcp-stdio = ["mcp", "dep:rmcp", "rmcp/transport-io", "rtemplate-mcp/stdio"]
api = ["auth", "dep:rtemplate-api"]
auth = [
  "dep:rtemplate-auth",
  "rtemplate-api?/auth",
  "rtemplate-mcp?/auth",
  "rtemplate-runtime/auth",
]
oauth = ["auth", "rtemplate-api?/oauth", "rtemplate-mcp?/oauth", "rtemplate-runtime/oauth"]
observability = ["dep:rtemplate-observability", "rtemplate-service/observability"]
plugin = ["cli", "dep:rtemplate-plugin-support"]
mcp-http = ["api", "mcp", "dep:axum", "dep:serde_json", "dep:tower-http", "rtemplate-mcp/http"]
web = ["api", "dep:rtemplate-web"]
local-adapter = ["cli", "mcp-stdio"]
server = ["cli", "api", "mcp-http", "mcp-stdio"]
full = ["local-adapter", "server", "web", "oauth", "observability", "plugin"]
test-support = ["rtemplate-mcp?/test-support"]

[dev-dependencies]
rmcp-template = { path = ".", features = ["test-support"] }
rtemplate-contracts = { path = "../rtemplate-contracts" }
rtemplate-service = { path = "../rtemplate-service" }
rtemplate-test-support = { path = "../rtemplate-test-support" }
serde_json = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
rmcp = { version = "1.7.0", default-features = false, features = [
  "client",
  "transport-child-process",
] }
