[package]
name = "rtemplate-api"
version = "0.4.1"
edition = "2021"
rust-version = "1.90"
description = "REST API and HTTP server composition for rmcp-template"
license = "MIT"
publish = false

[features]
default = []

[dependencies]
anyhow = "1"
axum = "0.8"
rtemplate-auth = { path = "../rtemplate-auth" }
rtemplate-contracts = { path = "../rtemplate-contracts" }
rtemplate-runtime = { path = "../rtemplate-runtime" }
rtemplate-service = { path = "../rtemplate-service" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
