[package]
name = "rtemplate-auth"
description = "Vendored OAuth 2.0 + JWT auth crate for rmcp-template and derived servers."
license = "MIT"
version = "0.4.1"
edition = "2024"
rust-version = "1.90"
keywords = ["oauth", "auth", "axum", "jwt", "mcp"]
categories = ["authentication", "web-programming::http-server"]
publish = false

[features]
# Explicit empty default to keep Cargo feature unification a no-op for downstream consumers.
default = []

[dependencies]
axum = "0.8"
base64 = "0.22"
dashmap = "6"
getrandom = "0.4"
httpdate = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.10.0-rc.16"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chacha20poly1305 = "0.10"
sha2 = "0.11"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
tower = "0.5"
tracing = "0.1"
url = "2"

[dev-dependencies]
rand = "0.10"
tempfile = "3.27"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
wiremock = "0.6"
