[package]
name = "rtemplate-cli"
version = "0.4.1"
edition = "2021"
rust-version = "1.90"
description = "CLI surface for rmcp-template"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rtemplate-api = { path = "../rtemplate-api" }
rtemplate-contracts = { path = "../rtemplate-contracts" }
rtemplate-runtime = { path = "../rtemplate-runtime" }
rtemplate-service = { path = "../rtemplate-service" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tempfile = "3"
