[package]
name = "rtemplate-cli"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
description = "CLI surface for rmcp-template"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rtemplate-contracts = { path = "../rtemplate-contracts" }
rtemplate-runtime = { path = "../rtemplate-runtime", default-features = false }
rtemplate-service = { path = "../rtemplate-service", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }

[dev-dependencies]
async-trait = "0.1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
