[package]
name = "rtemplate-contracts"
version = "0.4.1"
edition = "2021"
rust-version = "1.90"
description = "Shared contracts, config, action metadata, and schemas for rmcp-template"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
dirs = "6"
dotenvy = "0.15.7"
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
