[package]
name = "rtemplate-contracts"
version = "0.4.1"
edition = "2021"
rust-version = "1.96"
description = "Shared contracts, config, action metadata, and schemas for rmcp-template"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
dirs = "6"
dotenvy = "0.15.7"
schemars = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1"
jsonschema = "0.17"

[dev-dependencies]
# Serializes tests that mutate process-global env so `cargo test` (shared
# process; unlike nextest's process-per-test) cannot race on env state.
serial_test = "3"
